--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
   "require-dev": {},
   "autoload": {
     "psr-4": {
-      "cranky4\\changeLogBehavior\\": "src"
+      "seisvalt\\changeLogBehavior\\": "src"
     }
   }
 }
